--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: areggie <areggie@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2020/11/08 18:12:32 by areggie           #+#    #+#              #
-#    Updated: 2021/05/16 18:44:04 by areggie          ###   ########.fr        #
+#    Updated: 2022/04/26 22:11:02 by areggie          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,8 @@ SRCS =./ft_memset.c ./ft_bzero.c ./ft_memcpy.c\
   ./ft_putchar_fd.c ./ft_putstr_fd.c ./ft_putendl_fd.c\
   ./ft_putnbr_fd.c ./ft_lstaddback.c ./ft_lstlast.c ./ft_lstnew.c \
   ./ft_lstsize.c ./get_next_line.c ./ft_putchar.c ./ft_putstr.c\
-  ./ft_putendl.c ./get_next_line2.c ./ft_strcmp.c
+  ./ft_putendl.c ./get_next_line2.c ./ft_strcmp.c ./mem_free.c \
+  ./my_malloc.c
 
 OBJS = ${SRCS:.c=.o}
 
